Version 0.2.10
- Added scripts to assist in libtasn1 version detection
  from configure scripts.

Version 0.2.9
- Accept negative numbers as range in INTEGER declarations

Version 0.2.8
- Add asn1_delete_element function

Version 0.2.7
- Added versioned symbols.

Version 0.2.6
- ASN.1 parser accepts these kinds of integer definitions:
  "INTEGER (5 | 10)" and
  "INTEGER (5)"
- Comments start at "--" and finish at the "end of line" or
  with another "--". 

Version 0.2.5
- Bug fix in ordering procedure for SET OF and SEQUENCE OF
  types coding.
- Manage structured format (BER encoding) in
  asn1_der_decoding, asn1_decoding_element and 
  asn1_der_decoding_startEnd for OCTET STRING type.
- Manage SEQUENCE and SET empty structure. 
- Manage "indefinite length method" in asn1_der_decoding,
  asn1_decoding_element and asn1_der_decoding_startEnd 
  for the following types:
  SEQUENCE, SEQUENCE OF, SET, and SET OF.
- Bug fix in asn1_read_value with NULL parameter in case
  of BIT STRING

Version 0.2.4
- Bug fix in asn1_der_coding with NULL parameter
- Manage DEFAULT option with OBJECT IDENTIFIER

Version 0.2.3
- Chenge asn1_find_structure_from_oid prototype
- Chenge asn1_find_structure_from_oid prototype
- Add ASN1_MEM_ALLOC_ERROR return value

Version 0.2.2
- Add vector length check in asn1_der_coding function
- Add vector length check in asn1_der_coding function
- Add vector length check in asn1_read_value function
- Add asn1_check_version function

Version 0.2.1
- Add asn1_find_structure_from_oid function
- Add asn1_read_tag function

Version 0.2.0
- Support for other platforms
- Change asn1_create_element function interface (dest_name not needed any more)
- Change OBJECT IDENTIFIER syntax: numbers must be separated by dot in 
  asn1_write_element and asn1_read_element functions (e.g. "1.2.3.4")

Version 0.1.2
- Added GeneralString type
- Fixed a DER encoding bug when nested tags are used

Version 0.1.1
- Renamed to libtasn1