@@ -1,6 +1,8 @@
 Version 0.2.10
 - Added scripts to assist in libtasn1 version detection
   from configure scripts.
+- Corrected a DER decoding bug which was reported
+  by Max Vozeler <max@hinterhof.net>.
 
 Version 0.2.9
 - Accept negative numbers as range in INTEGER declarations
